--- a/src/Dash.Web/wwwroot/assets/css/sb-admin-2.css
+++ b/src/Dash.Web/wwwroot/assets/css/sb-admin-2.css
@@ -11680,7 +11680,7 @@ form.user .btn-user {
   font-size: 7rem;
   position: relative;
   line-height: 1;
-  width: 12.5rem;
+  /* width: 12.5rem; */
 }
 
 @-webkit-keyframes noise-anim {
